Change icon images to psevdoelements

--- a/index.html
+++ b/index.html
@@ -15,78 +15,69 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="all container">
-        <!-- FIRST -->
-        <div class="picture-page">
-            <div class="picture-page-box">
-                <h1 class="main-heading main-heading-one">Sayohat haqidagi eng qiziq bloglarni kuzatib boring.</h1>
-                <button class="main-button" type="button">
-                    <div class="button-spans">
-                        <span class="button-icon"></span>
-                        <span class="span-info">top bloglar</span>
-                    </div>
-                </button>
-            </div>
-        </div>
-        <!-- SECOND -->
-        <div class="info-page">
-            <div class="info-page-container">
-                <h1 class="main-heading main-heading-two">Eng so’nggi videolar</h1>
-
-                <div class="boxes">
-                    <div class="box">
-                        <img class="box-img" src="img/uchburchak.jpg" alt="uchburchak uy" width="160" height="90" srcset="img/uchburchak.jpg 1x, img/uchburchak@2x.jpg 2x">
-                        <div class="box-info">
-                            <h2 class="heading"><a class="box-heading" href="#">O’rmonda uchburchaksimon uy qurdik</a></h2>
-                            <div class="box-bottom">
-                                <div class="time">
-                                    <span class="clock"></span>
-                                    <span class="span-time">1 hafta oldin</span>
-                                </div>
-                                <div class="seem">
-                                    <span class="eye"></span>
-                                    <span class="span-seem">873 ming</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <img class="box-img" src="img/sohil.jpg" alt="sibirliklar uyi" width="160" height="90" srcset="img/sohil.jpg 1x, img/sohil@2x.jpg 2x">
-                        <div class="box-info">
-                            <h2 class="heading"><a class="box-heading" href="#">Sibirliklarning qoldirib ketilgan uychalari</a></h2>
-                            <div class="box-bottom">
-                                <div class="time">
-                                    <span class="clock"></span>
-                                    <span class="span-time">3 hafta oldin</span>
-                                </div>
-                                <div class="seem">
-                                    <span class="eye"></span>
-                                    <span class="span-seem">819 ming</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div> <div class="box">
-                        <img class="box-img" src="img/it.jpg" alt="yer uy" width="160" height="90" srcset="img/it.jpg 1x, img/it@2x.jpg 2x">
-                        <div class="box-info">
-                            <h2 class="heading"><a class="box-heading" href="#">Yer-uyida mallarang kuchugim bilan tunab qoldik</a></h2>
-                            <div class="box-bottom">
-                                <div class="time">
-                                    <span class="clock"></span>
-                                    <span class="span-time">1 oy oldin</span>
-                                </div>
-                                <div class="seem">
-                                    <span class="eye"></span>
-                                    <span class="span-seem">3.9 million</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+    <main class="main-content">
+        <div class="all container">
+            <!-- FIRST -->
+            <div class="picture-page">
+                <div class="picture-page-box">
+                    <h2 class="main-heading main-heading-one">Sayohat haqidagi eng qiziq bloglarni kuzatib boring.</h2>
+                    <button class="main-button" type="button">
+                            <span class="span-info">top bloglar</span>
+                    </button>
                 </div>
-                <a class="info-link" href="#">Yana yuklash</a>
+            </div>
+            <!-- SECOND -->
+            <div class="info-page">
+                <div class="info-page-container">
+                    <h2 class="main-heading main-heading-two">Eng so’nggi videolar</h2>
+                    <div class="boxes">
+                        <div class="box">
+                            <img class="box-img" src="img/uchburchak.jpg" alt="uchburchak uy" width="160" height="90" srcset="img/uchburchak.jpg 1x, img/uchburchak@2x.jpg 2x">
+                            <div class="box-info">
+                                <h3 class="heading"><a class="box-heading" href="#">O’rmonda uchburchaksimon uy qurdik</a></h3>
+                                <div class="box-bottom">
+                                        <span class="span-time">1 hafta oldin</span>
+                                        <span class="span-seem">873 ming</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <img class="box-img" src="img/sohil.jpg" alt="sibirliklar uyi" width="160" height="90" srcset="img/sohil.jpg 1x, img/sohil@2x.jpg 2x">
+                            <div class="box-info">
+                                <h3 class="heading"><a class="box-heading" href="#">Sibirliklarning qoldirib ketilgan uychalari</a></h3>
+                                <div class="box-bottom">
+                                    <div class="time">
+                                        <span class="clock"></span>
+                                        <span class="span-time">3 hafta oldin</span>
+                                    </div>
+                                    <div class="seem">
+                                        <span class="eye"></span>
+                                        <span class="span-seem">819 ming</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> <div class="box">
+                            <img class="box-img" src="img/it.jpg" alt="yer uy" width="160" height="90" srcset="img/it.jpg 1x, img/it@2x.jpg 2x">
+                            <div class="box-info">
+                                <h3 class="heading"><a class="box-heading" href="#">Yer-uyida mallarang kuchugim bilan tunab qoldik</a></h3>
+                                <div class="box-bottom">
+                                    <div class="time">
+                                        <span class="clock"></span>
+                                        <span class="span-time">1 oy oldin</span>
+                                    </div>
+                                    <div class="seem">
+                                        <span class="eye"></span>
+                                        <span class="span-seem">3.9 million</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="info-link" type="button">Yana yuklash</button>
+                </div>
             </div>
         </div>
-
-    </div>
+    </main>
     
 </body>
 </html>
