--- a/index.html
+++ b/index.html
@@ -11,69 +11,58 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed&display=swap" rel="stylesheet">
 
     <!-- STYLES -->
-    <!-- <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css"> -->
-    <link rel="stylesheet" href="css/styles.mini.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- <link rel="stylesheet" href="css/styles.mini.css"> -->
 </head>
 <body>
         <div class="all container">
             <!-- FIRST -->
-            <div class="picture-page">
-                <div class="picture-page-box">
-                    <h2 class="main-heading main-heading-one">Sayohat haqidagi eng qiziq bloglarni kuzatib boring.</h2>
-                    <button class="main-button" type="button">
-                            <span class="span-info">top bloglar</span>
+            <div class="all__picture-page picture-page">
+                <div class="picture-page__box">
+                    <h2 class="picture-page__heading picture-page__heading--one">Sayohat haqidagi eng qiziq bloglarni kuzatib boring.</h2>
+                    <button class="picture-page__button button" type="button">
+                            <span class="button__info">top bloglar</span>
                     </button>
                 </div>
             </div>
             <!-- SECOND -->
-            <div class="info-page">
-                <div class="info-page-container">
-                    <h2 class="main-heading main-heading-two">Eng so’nggi videolar</h2>
-                    <div class="boxes">
-                        <div class="box">
-                            <img class="box-img" src="img/uchburchak.jpg" alt="uchburchak uy" width="160" height="90" srcset="img/uchburchak.jpg 1x, img/uchburchak@2x.jpg 2x">
-                            <div class="box-info">
-                                <h3 class="heading"><a class="box-heading" href="#">O’rmonda uchburchaksimon uy qurdik</a></h3>
-                                <div class="box-bottom">
-                                        <span class="span-time">1 hafta oldin</span>
-                                        <span class="span-seem">873 ming</span>
+            <div class="all__info-page info-page">
+                <div class="info-page__container">
+                    <h2 class="info-page__heading info-page__heading--two">Eng so’nggi videolar</h2>
+                    <div class="info-page__boxes boxes">
+                        <div class="boxes__box box">
+                            <img class="box__img" src="img/uchburchak.jpg" alt="uchburchak uy" width="160" height="90" srcset="img/uchburchak.jpg 1x, img/uchburchak@2x.jpg 2x">
+                            <div class="box__info info">
+                                <h3 class="info__heading"><a class="info__link-heading" href="#">O’rmonda uchburchaksimon uy qurdik</a></h3>
+                                <div class="box__bottom bottom">
+                                    <span class="bottom__time">1 hafta oldin</span>
+                                    <span class="bottom__seem">873 ming</span>
                                 </div>
                             </div>
                         </div>
-                        <div class="box">
-                            <img class="box-img" src="img/sohil.jpg" alt="sibirliklar uyi" width="160" height="90" srcset="img/sohil.jpg 1x, img/sohil@2x.jpg 2x">
-                            <div class="box-info">
-                                <h3 class="heading"><a class="box-heading" href="#">Sibirliklarning qoldirib ketilgan uychalari</a></h3>
-                                <div class="box-bottom">
-                                    <div class="time">
-                                        <span class="clock"></span>
-                                        <span class="span-time">3 hafta oldin</span>
-                                    </div>
-                                    <div class="seem">
-                                        <span class="eye"></span>
-                                        <span class="span-seem">819 ming</span>
-                                    </div>
+                        <div class="boxes__box box">
+                            <img class="box__img" src="img/sohil.jpg" alt="sibirliklar uyi" width="160" height="90" srcset="img/sohil.jpg 1x, img/sohil@2x.jpg 2x">
+                            <div class="box__info info">
+                                <h3 class="info__heading"><a class="info__link-heading" href="#">Sibirliklarning qoldirib ketilgan uychalari</a></h3>
+                                <div class="box__bottom bottom">
+                                    <span class="bottom__time">3 hafta oldin</span>
+                                    <span class="bottom__seem">819 ming</span>
                                 </div>
                             </div>
-                        </div> <div class="box">
-                            <img class="box-img" src="img/it.jpg" alt="yer uy" width="160" height="90" srcset="img/it.jpg 1x, img/it@2x.jpg 2x">
-                            <div class="box-info">
-                                <h3 class="heading"><a class="box-heading" href="#">Yer-uyida mallarang kuchugim bilan tunab qoldik</a></h3>
-                                <div class="box-bottom">
-                                    <div class="time">
-                                        <span class="clock"></span>
-                                        <span class="span-time">1 oy oldin</span>
-                                    </div>
-                                    <div class="seem">
-                                        <span class="eye"></span>
-                                        <span class="span-seem">3.9 million</span>
-                                    </div>
+                        </div> <div class="boxes__box box">
+                            <img class="box__img" src="img/it.jpg" alt="yer uy" width="160" height="90" srcset="img/it.jpg 1x, img/it@2x.jpg 2x">
+                            <div class="box__info info">
+                                <h3 class="info__heading"><a class="info__link-heading" href="#">Yer-uyida mallarang kuchugim bilan tunab qoldik</a></h3>
+                                <div class="box__bottom bottom">
+                                    <span class="bottom__time">1 oy oldin</span>
+                                    <span class="bottom__seem">3.9 mln</span>
                                 </div>
+                            </div>
                             </div>
                         </div>
                     </div>
-                    <button class="info-link" type="button">Yana yuklash</button>
+                    <button class="info-page__link" type="button">Yana yuklash</button>
                 </div>
             </div>
         </div>
