--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed&display=swap" rel="stylesheet">
 
     <!-- STYLES -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <!-- <link rel="stylesheet" href="css/styles.mini.css"> -->
+    <!-- <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css"> -->
+    <link rel="stylesheet" href="css/styles.mini.css">
 </head>
 <body>
         <div class="all container">
